# DevCockpitCore

./: .gitignore  AGENTS.md  README.md  design-qa.md  pyproject.toml
adapters/: clippipegen.json  devcockpitcore.json  nlmytgen.json  writingpage.json
docs/: ARTIFACT_INDEX.md  DECISION_LOG.md  PROJECT_BRIEF.md  PROJECT_COCKPIT.md  PROJECT_PIPELINE.mmd  RESEARCH_NOTES.md  RESEARCH_TODO.md  ROADMAP.md  RUNTIME_STATE.md  UI_RUBRIC.md  VALIDATION.md  decision-log.md  idea-ledger.md  project-context.md  runtime-state.md
tests/: test_adapters.py  test_c3_command_set_freeze_and_c4_design_decision.py  test_c3_probe_hardening.py  test_c3_second_command_acceptance_review.py  test_c3_second_command_candidate_acceptance.py  test_c3_second_command_design.py  test_c3_second_command_hardening.py  test_c3_second_command_help_probe.py  test_c3_second_command_production_probe.py  test_c3_second_command_production_probe_review.py  test_c4_probe_authorization_review.py  test_c4_probe_decision_packet.py  test_c4_probe_minimal_implementation.py  test_c4_probe_minimal_implementation_review.py  test_c4_scoped_runner_design.py  test_c4_scoped_runner_design_hardening.py  test_c4_scoped_runner_design_review.py  test_controlled_runner_design.py  test_controlled_runner_probe.py  test_controlled_runner_probe_review.py  test_cross_project_smoke.py  test_current_observation.py  test_current_observation_ingress_cli.py  test_current_observation_safety_boundary_artifact.py  test_dashboard.py  test_dashboard_intent_comparison.py  test_dashboard_layout_research.py  test_dashboard_production_capture.py  (+11 more)
(+203 files in other folders)
