[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dev-cockpit-core"
version = "0.1.0"
description = "Read-only development supervision status producer."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
dev-cockpit-status = "dev_cockpit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
